--- a/index.html
+++ b/index.html
@@ -61,7 +61,31 @@
             </li>
           </ul>
         </div>
+        <button
+          type="button"
+          class="menu-button pointer"
+          aria-expanded="false"
+          aria-controls="menu"
+          data-menu-button
+        >
+          <svg
+            class="menu-burger"
+            width="40px"
+            height="40px"
+            aria-label="Переключатель мобильного меню"
+          >
+            <use
+              class="icon-burger"
+              href="./images/icons.svg#icon-menu-burger"
+            ></use>
+            <use
+              class="icon-cross"
+              href="./images/icons.svg#icon-menu-closer"
+            ></use>
+          </svg>
+        </button>
       </div>
+      <div class="menu" id="menu" data-menu></div>
     </header>
     <main>
       <section class="hero hero__overlay">
@@ -77,7 +101,7 @@
           <h2 hidden>Особенности</h2>
           <ul class="advantages__list list">
             <li class="advantages__item">
-              <div class="advantages__icons">
+              <div class="advantages__wrap">
                 <svg class="advantages__icon" width="65.32" height="70">
                   <use href="./images/icons.svg#icon-features-first"></use>
                 </svg>
@@ -89,7 +113,7 @@
               </p>
             </li>
             <li class="advantages__item">
-              <div class="advantages__icons">
+              <div class="advantages__wrap">
                 <svg class="advantages__icon" width="70" height="70">
                   <use href="./images/icons.svg#icon-features-second"></use>
                 </svg>
@@ -101,7 +125,7 @@
               </p>
             </li>
             <li class="advantages__item">
-              <div class="advantages__icons">
+              <div class="advantages__wrap">
                 <svg class="advantages__icon" width="70" height="70">
                   <use href="./images/icons.svg#icon-features-third"></use>
                 </svg>
@@ -112,7 +136,7 @@
               </p>
             </li>
             <li class="advantages__item">
-              <div class="advantages__icons">
+              <div class="advantages__wrap">
                 <svg class="advantages__icon" width="70" height="70">
                   <use href="./images/icons.svg#icon-features-fourth"></use>
                 </svg>
