--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,31 @@
             </li>
           </ul>
         </div>
+        <button
+          type="button"
+          class="menu-button pointer"
+          aria-expanded="false"
+          aria-controls="menu"
+          data-menu-button
+        >
+          <svg
+            class="menu-burger"
+            width="40px"
+            height="40px"
+            aria-label="Переключатель мобильного меню"
+          >
+            <use
+              class="icon-burger"
+              href="./images/icons.svg#icon-menu-burger"
+            ></use>
+            <use
+              class="icon-cross"
+              href="./images/icons.svg#icon-menu-closer"
+            ></use>
+          </svg>
+        </button>
       </div>
+      <div class="menu" id="menu" data-menu></div>
     </header>
     <main>
       <section class="catalog">
@@ -599,5 +623,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
