--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
   <body class="body">
     <header class="header">
       <div class="container">
-        <a lang="en" href="" class="logo header-logo link"
+        <a lang="en" href="./index.html" class="logo header-logo link"
           >Web<span class="header-studio">Studio</span></a
         >
         <nav class="navigation">
